--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "aws-sdk": "^2.432.0",
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.2",
+    "cli-table2": "^0.2.0",
+    "contentful": "^7.5.0",
     "express": "^4.16.4",
     "serverless-http": "^1.9.1"
   },
