--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "sls": "sls offline start --skipCacheInvalidation",
+    "sls-debug": "node-debug sls offline --skipCacheInvalidation"
   },
   "repository": {
     "type": "git",
@@ -20,11 +22,15 @@
   "homepage": "https://github.com/K-seniya/aws-servless#readme",
   "dependencies": {
     "aws-sdk": "^2.432.0",
+    "bcryptjs": "^2.4.3",
+    "bcryptjs-then": "^1.0.1",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
     "cli-table2": "^0.2.0",
     "contentful": "^7.5.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.4.20",
     "serverless-http": "^1.9.1"
   },
   "devDependencies": {
