--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/K-seniya/aws-servless#readme",
   "dependencies": {
+    "auth0-lock": "^11.14.1",
     "aws-sdk": "^2.432.0",
     "bcryptjs": "^2.4.3",
     "bcryptjs-then": "^1.0.1",
